image_verification/check_attestors.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  validationFailureAction: audit
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Ignore  
  rules:
    - name: verify-static-key
      match:
        resources:
          kinds:
            - Pod
      verifyImages:
      - image: "*"
        attestors:
        - count: 1
          entries:
          - keys: 
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
[...]
                -----END PUBLIC KEY-----
