image_verification/validate_manifests.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-resources
spec:
  rules:
    - name: check-manifests
      match:
        resources:
          kinds:
            - Pod
      validate:
        manifests:
          attestors:
          - count: 2
            entries:
            - keys: 
                publicKeys: |-
                  -----BEGIN PUBLIC KEY-----
                  MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyQfmL5YwHbn9xrrgG3vgbU0KJxMY
[...]
                  -----END PUBLIC KEY-----              
            - keys: 
                publicKeys: |-
                  -----BEGIN PUBLIC KEY-----
                  MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEE8uGVnyDWPPlB7M5KOHRzxzPHtAy
[...]
                  -----END PUBLIC KEY-----
